--- a/MathNotebooks/Logic.ipynb
+++ b/MathNotebooks/Logic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4841805e",
+   "id": "ebd4eb85",
    "metadata": {},
    "source": [
     "# Logic and Propositional Logic in Python\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a93610a",
+   "id": "405aae90",
    "metadata": {},
    "source": [
     "Logic is a fundamental area of mathematics and computer science that is used to __reason and infer__ information. It is important in computation because it is used to `model and reason about the behavior of algorithms`, systems, and programs. Here are some additional bullet points on advanced topics within Logic and some applications in the real world:\n",
@@ -30,12 +30,12 @@
     " - Database querying and reasoning\n",
     " - Natural Language Processing\n",
     "\n",
-    "Logic is a broad field with many diverse areas of study and applications, from theoretical foundations to practical applications in computer science and artificial intelligence. It is also a very important area of mathematics and has applications in areas such as philosophy and cognitive science."
+    "Logic is a broad field with many diverse areas of study and applications, from theoretical foundations to practical applications in `computer science and artificial intelligence`. It is also a very important area of mathematics and has applications in areas such as philosophy and cognitive science."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a2f32de3",
+   "id": "3cef2d36",
    "metadata": {},
    "source": [
     "### Propositions\n",
@@ -45,8 +45,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "54c944af",
+   "execution_count": 7,
+   "id": "776f7990",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,11 +58,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f1063da0",
+   "cell_type": "markdown",
+   "id": "d1d63364",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Logical Operators\n",
     "\n",
@@ -77,10 +75,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5516ed8f",
+   "execution_count": 8,
+   "id": "3c22a247",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# Example usage of logical operators\n",
     "\n",
@@ -95,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24f600e1",
+   "id": "2aa119ad",
    "metadata": {},
    "source": [
     "### Truth Tables\n",
@@ -105,10 +114,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b81fe93d",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 14,
+   "id": "e5fc805b",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p q p and q\n",
+      "True False False\n",
+      "True False True\n",
+      "True False False\n",
+      "True False True\n"
+     ]
+    }
+   ],
    "source": [
     "# Example truth table for a logical expression\n",
     "\n",
@@ -124,30 +147,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b73d7f9f",
+   "execution_count": 1,
+   "id": "4fdb40ab",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'TruthTable' from 'truthtable' (/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/truthtable/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/7q/qv8kfjjx3w54dzb96pyhlr080000gn/T/ipykernel_52518/316868078.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Visualization\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mtruthtable\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mTruthTable\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mexpr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'p & q'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mtt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTruthTable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexpr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'TruthTable' from 'truthtable' (/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/truthtable/__init__.py)"
+     ]
+    }
+   ],
    "source": [
     "# Visualization\n",
+    "from truthtable import TruthTable\n",
     "\n",
-    "from sympy.logic.boolalg import to_cnf\n",
-    "from sympy import symbols\n",
-    "\n",
-    "p, q = symbols('p q')"
+    "expr = 'p & q'\n",
+    "tt = TruthTable(expr)\n",
+    "print(tt.table())\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ec2a63a",
+   "id": "7e687bfb",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#Plotting the truth table for the logical expression (p and q)\n",
-    "truth_table = to_cnf(p & q)\n",
-    "truth_table.table()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
